[package]
name = "sqlitetest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
actix-web = "4"
serde = { version = "1.0.189", features = ["derive"] }
log = "0.4.20"